service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meu-site-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000  # Escolha uma porta entre 30000-32767
  selector:
    app: meu-site
