ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meu-site-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: meu-site.local  # Defina um nome de host
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meu-site-service
            port:
              number: 80
